--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:../recipes_db
+spring.datasource.username=test
+spring.datasource.password=test1234
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.settings.trace=false
+spring.jpa.hibernate.ddl-auto=update
